# pacurses

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pacurses/: main.py  pacurses.py
pacurses/constants/: button_names.py  menu_names.py  palette_names.py  sink_types.py  state_keys.py
pacurses/gui/: abbreviation.py  footer.py  header.py  palette.py  status.py
pacurses/gui/menus/: default.py  help.py  main.py  menu.py  mute.py  utils.py  volume.py
pacurses/gui/widgets/: named_progress_bar.py  sink_progress_bar.py  volume_slider.py
pacurses/pulse_audio/: external.py  information.py  input.py  output.py  pactl.py  sink.py  utils.py
